VERSION 2.7pre
==============
2008-04 - "bytes" type now consolidated with "string" type; strings no longer NULL terminated
2008-04 - Deal with RHEL3 libdb_cxx naming issues

VERSION 2.6 - 23 Jan 2008
=========================
2006-09 - libtool -static linking happily links against installed dynamic libraries even if static is available.  We now use a wrapper script when building smacqq to prefer static libraries if present.
2006-09 - Define support added (the :- operator) 
2006-09 - Group by can now be used in pipes as well as FROMs
2006-09 - SmacqGraphContainer::newQuery replaced with SmacqGraphContainer::addQuery
2006-09 - Renamed SmacqGraph to SmacqGraphNode and SmacqGraphContainer to SmacqGraph
2007-06 - GDA 1.3 support added (with backwards compatiblity to 1.2)
2007-06 - Ubuntu 7.04 x86_64 support
2007-06 - gcc 4.1.2 support (more pedantic)
2007-10 - smacq module for python, new python module for smacq
2007-11 - RHEL 5 x86_64 support
2008-01 - Python <2.5 support
2008-01 - flowid module: bugfix
2008-01 - Don't warn (ala -q) when testing for existance of a field and it doesn't exist
2008-01 - Print column number in parse error messages
2008-01 - pcaplive: Support 64-bit timeval (RHEL5 x86-64)
2008-01 - python bindings: 
	- repr(), str() improvements
	- strings can contain NULLs now (DTS string obj lengths now exact)
	- RPM fixes

VERSION 2.5 - 29 August 2006
============================
2006-08 - print module: syslog options
2006-08 - ipproto type: fixed printing as text instead of numeric (e.g. tcp instead of 6), added double field
2006-08 - sort module now sorts numerically whenever possible, handles multiple dimensions better, -r for reverse order
2006-07 - new modules: take, deskew
2006-07 - Date/Time parsers now support Unix epoch time strings
2006-07 - Default time output format is now RFC 3339 (a profile of ISO 8601)
2006-06 - pcapwrite (via StrucioWriter.h):
	- now substitues %T in a filename with the current timestamp